--- a/CSS/QUIZPAGE/style.css
+++ b/CSS/QUIZPAGE/style.css
@@ -3,9 +3,10 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-left: 10px;
+  /* padding-left: 10px;
   padding-right: 10px;
-  padding-top: 24px;
+  padding-top: 24px; */
+  padding:24px 10px 0;
 }
 .question-header {
   display: flex;
