--- a/CSS/QUIZPAGE/style.css
+++ b/CSS/QUIZPAGE/style.css
@@ -1,11 +1,9 @@
 main {
+  height:100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 24px; */
   padding:24px 10px 0;
 }
 .question-header {
